<?xml version="1.0"?>
<package>
  <name>drawpath</name>
  <version>0.0.0</version>
  <description>The drawpath package</description>

  <maintainer email="lihao2015@whu.edu.cn">lihao</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ugv_navigation</url>
  <author email="lihao2015@whu.edu.cn">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
